5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_2049.log
== TEST (2019-04-04 02:16:27) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
printt(a,b)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    printt(a,b)
NameError: name 'printt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:17:14) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
print(a,b)
-- OUTPUT:
8.0 5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:19:00) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a,b,c,d)
-- OUTPUT:
8.0 5.0 1.0 3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 02:19:36) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a,b,c,d)
-- EXECUTION TIME:
0.178441
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0 5.0 1.0 3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0 2.0 7.0 0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0 2.0 173.0 1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 02:21:41) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.121957
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:21:54) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:22:54) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 02:23:26) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.132265
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8.0
5.0
1.0
3.0
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14.0
2.0
7.0
0.0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347.0
2.0
173.0
1.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:23:58) 
-- CODE:
a=float(input("digite o dividendo:  "))
b=float(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8.0
5.0
1.0
3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:25:16) 
-- CODE:
a=int(input("digite o dividendo:  "))
b=int(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 02:26:02) 
-- CODE:
a=int(input("digite o dividendo:  "))
b=int(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.163423
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:17:40) 
-- CODE:
a=int(input("digite o dividendo:  "))
b=int(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:17:41) 
-- CODE:
a=int(input("digite o dividendo:  "))
b=int(input("digite o divisor:  "))
c=a//b
d=a%b
print(a)
print(b)
print(c)
print(d)
-- EXECUTION TIME:
0.172375
-- TEST CASE 1:
---- input:
8
5
---- correct output:
8
5
1
3
---- user output:
8
5
1
3
-- TEST CASE 2:
---- input:
14
2
---- correct output:
14
2
7
0
---- user output:
14
2
7
0
-- TEST CASE 3:
---- input:
347
2
---- correct output:
347
2
173
1
---- user output:
347
2
173
1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
